src-errormsg/E15-LowercaseConstructor/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E15-LowercaseConstructor/Plinth.hs:28:3: error: [GHC-07626]
    Parse error in pattern: amount
   |
28 |   amount n -> n
   |   ^^^^^^^^
